PIM-8488: Fix wrapping of inline filters on records

--- a/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/grid/FilterBox.less
+++ b/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/grid/FilterBox.less
@@ -79,6 +79,7 @@
 
     &--inline {
       display: flex;
+      flex-wrap: wrap;
     }
   }
 
